[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fws"
version = "0.1.0"
authors = [
  { name="Ben Jackson", email="bj8@sanger.ac.uk" },
]
description = "a small package for calculating fws"
readme = "README.md"
requires-python = ">=3.10, <3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'numba',
  'numpy',
  'pandas',
  'statsmodels',
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]